--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1580,107 +1580,107 @@ stories:
   domain: http://itemonline.com/
   link: https://www.itemonline.com/iu-s-ramsey-ready-to-face-namesake-s-alma-mater/article_262fe801-8a5e-5275-ba9c-bcd8f4b29032.html
 images:
-- name: old-door-lock-old-door-lock-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-nazi-poster.jpg
-- name: capital-battle-capitolbattle-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-light-dali.jpg
-- name: bluelake-deep-connections-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-deep-connections-file-00-00-00-00.jpg
-- name: udnie-P6210065.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-P6210065.jpg
-- name: rockingchair-rockingchair-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-alberto-giacometti.jpg
-- name: beach-rocks-beach-rocks-currents-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-crafty-painting.jpg
-- name: adam-smith-adam-smith-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-horiz-circuit.jpg
-- name: mediterranean-mediterranean-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-post-modern.jpg
-- name: statue-of-liberty-front-view-statueofliberty-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-smooth-ride.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-attack-planes.jpg
-- name: powerlines-power-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-missle.jpg
-- name: udnie-DSC_0035-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0035-2.jpg
-- name: white-house-lawn-white-house-lawn-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-smoking-cigarette.jpg
-- name: 35201856153_61bc075e4b-rain-princess.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-rain-princess.jpg
-- name: cargo-ship-cargo-ship-on-sea-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-smooth-ride.jpg
-- name: containership-containership-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-mucha-mult.jpg
-- name: bf-skinner-old-building-barcelona-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-building-barcelona-waterfront.jpg
-- name: old-door-lock-old-door-lock-2-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-4.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-kand-two.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-crabapple.jpg
-- name: carry-load-carryload-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-post-modern.jpg
-- name: oldhouse-oldhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-alberto-giacometti.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-jap-wav-pr.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-jap-wav-pr.JPG
-- name: berlinwall2-berlinwall-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-green-zuma.jpg
-- name: border-fence-border-fence-on-hill-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-smoking-cigarette.jpg
-- name: carry-load-carryload-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-colored-circuits.jpg
-- name: aws-s3-stories-new-43-150-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-43-150-800-500-0-max-0--5--5.jpg
-- name: oldcabin-store-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-post-modern.jpg
-- name: cargo-ship-cargo-ship-on-sea-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-electricity.jpg
-- name: miamibeach-miamibeach-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-wols.jpg
-- name: adam-smith-adam-smith-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-ww2-dresden.jpg
-- name: nazi-invasion-cargo-ship_36587814601_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-cargo-ship_36587814601_o.jpg
-- name: bluelake-bright-sand-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-bright-sand-file-00-00-38-67.jpg
-- name: death-valley-death-valley-national-park-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-clean-view.jpg
-- name: old-house-oldhouse-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-spagetti-accident.jpg
-- name: old-door-lock-old-door-lock-2-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-sunday.jpg
-- name: blossombar-clean-view-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-clean-view-file-00-00-24-99.jpg
-- name: scream-IMG_E3643.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_E3643.jpg
-- name: trucksilo-trucksilo-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-kandinsky-bv.jpg
-- name: fence-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence.jpg
-- name: stalin-time-yellow-tree-in-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-yellow-tree-in-rocks.jpg
-- name: 35201856153_61bc075e4b-wave.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-wave.jpg
-- name: aws-s3-dunes-dunes-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-dunes-dunes-still-1200.jpg
-- name: art-museum-art-museum-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-yellow-paper.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory.jpg
-- name: braceros-domingo-ulloa-grafitti-woman-bangs.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-grafitti-woman-bangs.jpg
-- name: containership-containership-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-purple-pond.jpg
-- name: oldbarn-oldbarn-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-gred-mash.jpg
-- name: windowmountain-window-mountain-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crunch-paper.jpg
-- name: meadowbutterfly-meadow-butterfly-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-smooth-ride.jpg
-- name: gears-4882162452-fa3126b38d-b-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-ww2-dresden.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-constitution.jpg
+- name: school-clouds-church-clouds-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-sand-paper.jpg
+- name: bf-skinner-construction-zone-claw.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-construction-zone-claw.jpg
+- name: server-cloud-server-racks-clouds-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-constitution.jpg
+- name: cargo-ship-cargo-ship-on-sea-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-ww2-dresden.jpg
+- name: white-house-lawn-white-house-lawn-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-diego-rivera1.jpg
+- name: wind-mills-windmills-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-creativity.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-satan-red.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-satan-red.JPG
+- name: nazi-invasion-IMG_2410.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_2410.jpg
+- name: adam-smith-adam-smith-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-really-hot.jpg
+- name: berlinwall-DSC-0084-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-wols.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-hot-spicy.jpg
+- name: store-on-corner-store-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-smooth-ride.jpg
+- name: window-window-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-constitution.jpg
+- name: locked-up-steam-lock-up-steam-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-deep-connections.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-creativity.jpg
+- name: nazi-invasion-firetruck-bright-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-firetruck-bright-sun.jpg
+- name: power-lines-power-lines-empty-space-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-sunday.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-sunday.png
+- name: aws-s3-stories-new-27-127-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-127-800-500-0-max-0--5--1.jpg
+- name: walled-garden-walled-garden-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-rainbow-festival.jpg
+- name: oldbarn-oldbarn-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-sand-paper.jpg
+- name: meadowbutterfly-meadow-butterfly-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-satan-red.jpg
+- name: old-gas-pumps-oldgaspumps-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dark-dali.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-circuit-3.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-circuit-3.JPG
+- name: christianity-christianity-under-construction-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-china-prop.jpg
+- name: paris-paris-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-post-modern.jpg
+- name: white-house-lawn-white-house-window-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-alberto-giacometti.jpg
+- name: ellis-island-ellisisland-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-blocks.jpg
+- name: copper-circuit-old-comuter-wheels-crypto.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-comuter-wheels-crypto.jpg
+- name: store-on-corner-oldcabin-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-rain.jpg
+- name: store-on-corner-store-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-bright-sand.jpg
+- name: catacombs-catacombs.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs.jpg
+- name: lincoln-memorial-lincolnmemorial-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-atari-missle.jpg
+- name: gypsy-wagon-gypsywagon-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-green-zuma.jpg
+- name: art-museum-art-museum-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-cinnamon-rolls.jpg
+- name: white-house-whitehouse-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-colorful-blocks.jpg
+- name: mediterranean-mediterranean-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-atari-missle.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-mucha-mult.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-mucha-mult.png
+- name: mistywoods-babyfoot-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-ww2-color.jpg
+- name: stories-cargo-ship-on-sea-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-blue-circuit.jpg
+- name: dragon_close-up-rain-princess.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-rain-princess.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-aqua.jpg
+- name: trucksilo-trucksilo-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-asteroids.jpg
+- name: wind-mills-windmills-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-deep-connections.jpg
+- name: abe-lincoln-one-umberto-bocc-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-umberto-bocc-file-00-00-00-00.jpg
+- name: store-on-corner-store-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colorful-dream.jpg
+- name: nazi-invasion-IMG_7954.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7954.jpg
+- name: copper-circuit-colonial-solider-pointing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-colonial-solider-pointing.jpg
+- name: machine-road-machine-road-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-sunday.jpg
+- name: rain-princess-DSC_0001.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0001.jpg
 ---
 Brave Swimmers Make The Traditional Winter Dip At One Mile.&nbsp;Japan's Emperor Waves To Crowds In 1st New Year's Greeting.&nbsp;Mason City Applies To Join NEIC, Oelwein Considers Leaving.&nbsp;India Cold Wave Breaks Records, Shuts Schools And Makes Bad Air Worse.&nbsp;Winning Watson Prepared To Lead Houston Texans Into Playoffs.&nbsp;Laurentian Lakes Chapter Hosting 13th Annual Winter Trails Day.&nbsp;IU's Ramsey Ready To Face Namesake's Alma Mater.&nbsp;IU's Ramsey Ready To Face Namesake's Alma Mater.&nbsp;
